@@ -131,7 +131,7 @@ AC_SUBST([ISODATE])
 # release, then set age to 0.
 #
 LIBFREEIPMI_CURRENT=15
-LIBFREEIPMI_REVISION=1
+LIBFREEIPMI_REVISION=2
 LIBFREEIPMI_AGE=0
 
 LIBFREEIPMI_VERSION=$LIBFREEIPMI_CURRENT.$LIBFREEIPMI_REVISION.$LIBFREEIPMI_AGE
@@ -153,7 +153,7 @@ AC_SUBST([LIBFREEIPMI_VERSION_INFO])
 
 LIBFREEIPMI_VERSION_MAJOR=4
 LIBFREEIPMI_VERSION_MINOR=0
-LIBFREEIPMI_VERSION_PATCH=1
+LIBFREEIPMI_VERSION_PATCH=2
 
 AC_SUBST(LIBFREEIPMI_VERSION_MAJOR)
 AC_SUBST(LIBFREEIPMI_VERSION_MINOR)
